[package]
name = "rt"
version = "0.1.0"
authors = ["Neil Danson <neil.danson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#pixel-canvas = "0.2.2"
glam = "0.20.2"
rayon = "1.5.1"
num_cpus = "1.13.1"
minifb="0.20.0"

[dev-dependencies]
criterion = "0.3.5"


[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false